[gd_scene load_steps=36 format=2]

[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/LeftArm2.png" type="Texture" id=1]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/torsodown.png" type="Texture" id=2]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/LeftArm1.png" type="Texture" id=3]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/head.png" type="Texture" id=4]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/RightArm2.png" type="Texture" id=5]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/RightArm1.png" type="Texture" id=6]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/torso.png" type="Texture" id=7]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/torsoend.png" type="Texture" id=8]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/legs.png" type="Texture" id=9]
[ext_resource path="res://Chars/DT Sans/Dusttrust Sans Phase 1.gd" type="Script" id=10]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/lefteye.png" type="Texture" id=11]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/righteye.png" type="Texture" id=12]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/cape.png" type="Texture" id=13]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/backcape.png" type="Texture" id=14]
[ext_resource path="res://Chars/DT Sans/Sprites/effect.png" type="Texture" id=15]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/head1.png" type="Texture" id=16]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/head2.png" type="Texture" id=17]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/head3.png" type="Texture" id=18]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/head4.png" type="Texture" id=19]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/LeftArm3.png" type="Texture" id=20]
[ext_resource path="res://Chars/DT Sans/Sprites/Dusttrust Sans Phase 1/RightArm3.png" type="Texture" id=21]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float speed = 0.5;
uniform float frequency_y = 5.0;
uniform float frequency_x = 3.0;
uniform float amplitude_y = 3.0;
uniform float amplitude_x = 2.0;
uniform float inclination = 1.0;

void vertex() {
	VERTEX.y += sin((UV.x - TIME * speed) * frequency_y) * amplitude_y * UV.x;
	VERTEX.x += cos((UV.y - TIME * speed) * frequency_x) * amplitude_x * UV.x;
	VERTEX.x -= UV.y * inclination;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/speed = 0.5
shader_param/frequency_y = 5.0
shader_param/frequency_x = 3.0
shader_param/amplitude_y = 3.0
shader_param/amplitude_x = 2.0
shader_param/inclination = 1.0

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float speed = 0.5;
uniform float frequency_y = 10.0;
uniform float frequency_x = 7.0;
uniform float amplitude_y = 3.0;
uniform float amplitude_x = 5.0;
uniform float inclination = 0.0;

void vertex() {
	VERTEX.y += sin((UV.x - TIME * speed) * frequency_y) * amplitude_y * UV.x;
	VERTEX.x += cos((UV.y - TIME * speed) * frequency_x) * amplitude_x * UV.x;
	VERTEX.x -= UV.y * inclination;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/speed = 0.5
shader_param/frequency_y = 10.0
shader_param/frequency_x = 7.0
shader_param/amplitude_y = 3.0
shader_param/amplitude_x = 5.0
shader_param/inclination = 0.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Curve" id=7]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0.0131579, -220.091 ), 0.0, 3168.97, 0, 0, Vector2( 1, 15.5454 ), 2465.64, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0.0460526, 0.0647727 ), 0.0, -0.25124, 0, 0, Vector2( 0.960526, 0.0193182 ), -1.18441, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="Curve" id=11]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 172.273 ), 0.0, -5343.03, 0, 0, Vector2( 1, 1 ), -3120.4, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
tangential_accel_random = 1.0
tangential_accel_curve = SubResource( 12 )
angle_curve = SubResource( 8 )
scale_curve = SubResource( 10 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 20 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[node name="Dusttrust Sans Phase 1" type="KinematicBody2D"]
position = Vector2( 322.25, 257.5 )
scale = Vector2( 2, 2 )
script = ExtResource( 10 )

[node name="legs" type="Sprite" parent="."]
texture = ExtResource( 9 )
offset = Vector2( 0, -13.5 )

[node name="torsodown" type="Sprite" parent="."]
position = Vector2( -0.0220032, -30.4805 )
texture = ExtResource( 2 )

[node name="torso" type="Sprite" parent="torsodown"]
position = Vector2( 0, -18 )
texture = ExtResource( 7 )

[node name="backcape" type="Sprite" parent="torsodown/torso"]
material = SubResource( 2 )
position = Vector2( 10.7956, 19.2398 )
z_index = -1
texture = ExtResource( 14 )
offset = Vector2( 0, 13 )
flip_h = true

[node name="cape" type="Sprite" parent="torsodown/torso"]
material = SubResource( 4 )
position = Vector2( -19.25, -8.75 )
z_index = -4
texture = ExtResource( 13 )
offset = Vector2( 0, 19 )

[node name="head" type="AnimatedSprite" parent="torsodown/torso"]
position = Vector2( -0.5, -9.5 )
frames = SubResource( 5 )
offset = Vector2( 0, -18 )

[node name="lefteye" type="Sprite" parent="torsodown/torso/head"]
position = Vector2( -6.5, -18.5 )
texture = ExtResource( 11 )

[node name="righteye" type="Sprite" parent="torsodown/torso/head"]
position = Vector2( 6.5, -18.5 )
texture = ExtResource( 12 )

[node name="RightArm1" type="Sprite" parent="torsodown/torso"]
position = Vector2( 16.5, -5.5 )
z_index = -1
texture = ExtResource( 6 )
offset = Vector2( 8, 4 )

[node name="RightArm2" type="AnimatedSprite" parent="torsodown/torso/RightArm1"]
position = Vector2( 8, 17 )
z_index = -2
frames = SubResource( 6 )
centered = false
offset = Vector2( -1, -45 )

[node name="Particles2D" type="Particles2D" parent="torsodown/torso/RightArm1/RightArm2"]
self_modulate = Color( 1, 0, 1, 1 )
position = Vector2( 19.5997, -6.90448 )
rotation = 1.5708
scale = Vector2( 1, -1 )
amount = 12
fixed_fps = 60
fract_delta = false
process_material = SubResource( 13 )
texture = ExtResource( 15 )

[node name="LeftArm1" type="Sprite" parent="torsodown/torso"]
position = Vector2( -15.5, -5.5 )
z_index = -1
texture = ExtResource( 3 )
offset = Vector2( -8, 4 )

[node name="LeftArm2" type="AnimatedSprite" parent="torsodown/torso/LeftArm1"]
position = Vector2( -8, 17 )
z_index = -2
frames = SubResource( 14 )
centered = false
offset = Vector2( -46, -45 )

[node name="Particles2D" type="Particles2D" parent="torsodown/torso/LeftArm1/LeftArm2"]
self_modulate = Color( 1, 0, 1, 1 )
position = Vector2( -20.4907, -6.68175 )
rotation = 1.5708
amount = 12
fixed_fps = 60
process_material = SubResource( 13 )
texture = ExtResource( 15 )

[node name="torsoend" type="Sprite" parent="torsodown"]
position = Vector2( 0, -3.5 )
texture = ExtResource( 8 )
offset = Vector2( 0, 10 )
